# f1tenth_project

./: .gitignore  README.md  build_with_db.sh  project.md  setup_env.sh
docs/: f1tenth_comparison_report.md  f1tenth_deps_matrix.csv
src/: vesc_config_changes.md
src/lab1_pkg/: CMakeLists.txt  package.xml
src/lab1_pkg/launch/: lab1_launch.py
src/lab1_pkg/src/: relay.cpp  talker.cpp
src/safety_node/: DEBUG_NOTES.md
src/safety_node/src/: safety_node.cpp  safety_node_objective.md
